# Social-Gaming

./: BoostREADME.md  CMakeLists.txt  README.md  a.out  playground.cpp  webchat.html
codeReview/interpreter/: a.out  interpreter.cpp
codeReviewSubmission/codeReview/: readMe.txt
codeReviewSubmission/codeReview/interpreter/include/: interpreter.h
configs/: CMakeLists.txt
configs/games/: LA.json  argument_test.json  for_each_test.json  game.cpp  getter_test.json  inparallel_test.json  loop_switch_test.json  not_so_simple.json  parallel_test.json  parallelfor_test.json  rock_no_when.json  rock_paper_scissors.json  rounds.json  setup_test.json  shuffle_sort_test.json  simple.json  simple2.json  testing.json  timers_test.json
configs/server/: config1.json  config2.json  from_build_folder.json  from_root_folder.json
lib/: CMakeLists.txt  common.h
lib/Gamespec/: CMakeLists.txt  Gamespec.cpp
lib/Gamespec/include/: Gamespec.h
lib/antlr/: CMakeLists.txt  README  evaluator.cpp  makefile  test  test.cpp
lib/authentication/: CMakeLists.txt  a.out  test.h  user.cpp
lib/authentication/include/: user.h
lib/interpreter/: CMakeLists.txt  interpreter.cpp
lib/interpreter/include/: interpreter.h
lib/networking/: CMakeLists.txt
lib/networking/include/: Server.h
lib/networking/src/: Server.cpp
lib/translator/: CMakeLists.txt  translator.cpp  variables.cpp
lib/translator/include/: CMakeLists.txt  translator.h  variables.h
project/lib/: user.cpp
project/tools/minesweeper/: CMakeLists.txt  a.out  minesweeper.cpp
test/: CMakeLists.txt  HailstoneTest.cpp  TestAwardCeremony.cpp  TriangleTest.cpp  VariablesTest.cpp  exampleText.cpp
tools/: CMakeLists.txt
tools/chatserver/: chatserver.cpp
tools/gameserver/: CMakeLists.txt  gameserver.cpp
tools/interpreter/: interpreter.cpp
tools/jsonEx/: jsonRet.cpp
tools/minesweeper/: a.out  minesweeper.cpp
